fixed whitespace issues

--- a/static/css/Login.css
+++ b/static/css/Login.css
@@ -1,18 +1,13 @@
 .u-section-1 {
   background-image: none;
-  min-height: 607px;
 }
 .u-section-1 .u-layout-wrap-1 {
   margin: 0 auto 0 0;
-}
-.u-section-1 .u-layout-cell-1 {
-  min-height: 607px;
 }
 .u-section-1 .u-container-layout-1 {
   padding: 3px 0 30px;
 }
 .u-section-1 .u-group-1 {
-  min-height: 607px;
   background-image: none;
   margin: -3px auto -30px 0;
 }
@@ -30,14 +25,11 @@
   width: 445px;
   margin: 33px auto 0;
 }
-.u-section-1 .u-layout-cell-2 {
-  min-height: 607px;
-}
+
 .u-section-1 .u-container-layout-3 {
   padding: 4px 0 30px;
 }
 .u-section-1 .u-group-2 {
-  min-height: 607px;
   background-image: none;
   margin: -4px auto -30px;
 }
@@ -80,16 +72,11 @@
 }
 
 @media (max-width: 1199px) {
-  .u-section-1 {
-    min-height: 100px;
-  }
   .u-section-1 .u-layout-wrap-1 {
     margin-right: initial;
     margin-left: initial;
   }
-  .u-section-1 .u-layout-cell-1 {
-    min-height: 501px;
-  }
+
   .u-section-1 .u-group-1 {
     margin-right: initial;
     margin-left: initial;
@@ -101,9 +88,7 @@
   .u-section-1 .u-text-1 {
     width: 410px;
   }
-  .u-section-1 .u-layout-cell-2 {
-    min-height: 501px;
-  }
+
   .u-section-1 .u-group-2 {
     margin-right: initial;
     margin-left: initial;
@@ -119,12 +104,6 @@
 }
 
 @media (max-width: 991px) {
-  .u-section-1 {
-    min-height: 18px;
-  }
-  .u-section-1 .u-layout-cell-1 {
-    min-height: 100px;
-  }
   .u-section-1 .u-image-1 {
     width: 300px;
     height: 55px;
@@ -132,18 +111,13 @@
   .u-section-1 .u-text-1 {
     width: 300px;
   }
-  .u-section-1 .u-layout-cell-2 {
-    min-height: 100px;
-  }
+
   .u-section-1 .u-form-1 {
     width: 300px;
   }
 }
 
 @media (max-width: 767px) {
-  .u-section-1 {
-    min-height: 1482px;
-  }
   .u-section-1 .u-container-layout-2 {
     padding-left: 10px;
     padding-right: 10px;
@@ -151,11 +125,5 @@
   .u-section-1 .u-container-layout-4 {
     padding-left: 10px;
     padding-right: 10px;
-  }
-}
-
-@media (max-width: 575px) {
-  .u-section-1 {
-    min-height: 1230px;
   }
 }
